S197 done: wifi will be checked in mainactivity, this is the most bugfree method to check it in this app. GPS will be tested in the locationmanager, in getMyLocation in locationclass. S207 done: In getMyLocation, loc will be updated every 5 minutes(300.000ms) S257 done: Loc coordinates will be shown in debugger

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".Location.LocationActivity" />
+        <activity android:name=".Location.LocationClass" />
+        <activity android:name=".Location.AlertClass" />
     </application>
 
 </manifest>
